--- a/test-environment/templates/server.yaml
+++ b/test-environment/templates/server.yaml
@@ -35,13 +35,13 @@ spec:
                       timeoutSeconds: 5
                       failureThreshold: 3
                   volumeMounts:
-                      - mountPath: "/usr/local/filewave/fwxserver/DB"
+                      - mountPath: "/fwxserver/DB"
                         name: ssd-vol-{{ .Release.Name }}
                         subPath: db
                       - mountPath: "/private/var/log/FWAdmin Audit"
                         name: standard-vol-{{ .Release.Name }}
                         subPath: audit
-                      - mountPath: "/usr/local/filewave/fwxserver/Data Folder"
+                      - mountPath: "/fwxserver/Data Folder"
                         name: standard-vol-{{ .Release.Name }}
                         subPath: data-folder
                       - mountPath: "/usr/local/filewave/apache/conf"
