--- a/test-environment/templates/client.yaml
+++ b/test-environment/templates/client.yaml
@@ -22,6 +22,7 @@ spec:
                   image: "filewave/fwcld:{{ $.Values.clientVersion }}"
                   resources:
                       requests:
+                          cpu: "20m"
                           memory: "20Mi"
                   env:
                       - name: "FILEWAVE_SERVER_HOST"
