--- a/test-environment/values.yaml
+++ b/test-environment/values.yaml
@@ -55,19 +55,19 @@ boostersConfiguration:
     upstreamPort: 20015
     hasPublicIpAddressForDebug: false
   - name: &chained1BoosterConfigurationName chained-1
-    enabled: true
+    enabled: false
     serviceEnabled: true
     upstreamHostname: *serverHostname
     upstreamPort: 20015
     hasPublicIpAddressForDebug: false
   - name: &chained2BoosterConfigurationName chained-2
-    enabled: true
+    enabled: false
     serviceEnabled: true
     upstreamHostname: te-marcins-booster-chained-1-svc      # Service prefix must be in sync with "environmentName".
     upstreamPort: 20013
     hasPublicIpAddressForDebug: false
   - name: &chained3BoosterConfigurationName chained-3
-    enabled: true
+    enabled: false
     serviceEnabled: true
     upstreamHostname: te-marcins-booster-chained-2-svc      # Service prefix must be in sync with "environmentName".
     upstreamPort: 20013
@@ -90,14 +90,14 @@ clientsConfiguration:
     count: 1
     upstreamBoosterHostname:
   - name: with-chained-1
-    enabled: true
+    enabled: false
     count: 1
     upstreamBoosterHostname: *chained1BoosterConfigurationName
   - name: with-chained-2
-    enabled: true
+    enabled: false
     count: 1
     upstreamBoosterHostname: *chained2BoosterConfigurationName
   - name: with-chained-3
-    enabled: true
+    enabled: false
     count: 1
     upstreamBoosterHostname: *chained3BoosterConfigurationName
