--- a/test-environment/templates/server.yaml
+++ b/test-environment/templates/server.yaml
@@ -21,6 +21,7 @@ spec:
                   imagePullPolicy: Always
                   resources:
                       requests:
+                          cpu: "1800m"
                           memory: "{{ .Values.serverMemoryGi }}Gi"
                   lifecycle:
                       postStart:
