--- a/test-environment/templates/client.yaml
+++ b/test-environment/templates/client.yaml
@@ -26,7 +26,8 @@ spec:
                   image: "filewave/fwcld:{{ $.Values.clientVersion }}"
                   resources:
                       requests:
-                          cpu: "5m"
+                          cpu: {{ $.Values.clientCpu }}
+                          memory: {{ $.Values.clientMemory }}
                   env:
                       - name: "FILEWAVE_SERVER_HOST"
                         value: "{{ $.Values.serverHostname }}"
