--- a/test-environment/values.yaml
+++ b/test-environment/values.yaml
@@ -20,11 +20,14 @@ serverHostname: &serverHostname test-environment.filewave.ch
 # image.
 serverVersion: 14.0.0
 
-# serverMemoryGi is for defining how much memory Server will request.
-serverMemoryGi: 4
+# serverCpu is for defining how much CPU Server will request.
+serverCpu: 1500m
 
-# serverStorageGi is for defining how much disk space Server will request.
-serverStorageGi: 6
+# serverMemory is for defining how much memory Server will request.
+serverMemory: 4Gi
+
+# serverStorage is for defining how much disk space Server will request.
+serverStorage: 6Gi
 
 # serverSoftwareUpdateProcessEnabled is for enabling or disabling fwsu process.
 # To be more precise, it's not enabling or disabling fwsu but alters lists of servers fwsu will query for software
@@ -36,6 +39,12 @@ serverSoftwareUpdateProcessEnabled: false
 # boosterVersion is for defining a tag in DockerHub filewave/fwbooster repository that will be used to pull Booster's
 # image.
 boosterVersion: 14.0.0
+
+# boosterCpu is for defining how much CPU Booster will request.
+boosterCpu: 500m
+
+# boosterMemory is for defining how much memory Booster will request.
+boosterMemory: 2Gi
 
 # boostersConfiguration is a list of dictionaries that define Boosters which will be deployed to Kubernetes.
 # - name is for defining Booster's name.
@@ -83,6 +92,12 @@ boostersConfiguration:
 # clientVersion is for defining a tag in DockerHub filewave/fwcld repository that will be used to pull Client's
 # image.
 clientVersion: 14.0.0
+
+# clientCpu is for defining how much CPU Booster will request.
+clientCpu: 5m
+
+# clientMemory is for defining how much memory Booster will request.
+clientMemory: 40Mi
 
 # clientsConfiguration is a list of dictionaries that define Clients which will be deployed to Kubernetes.
 # - name is for defining name for group of Clients with a specific configuration.
