--- a/test-environment/templates/client.yaml
+++ b/test-environment/templates/client.yaml
@@ -19,8 +19,8 @@ spec:
     spec:
       containers:
 # Once nested range is entered, context from the outer one seems to be lost hence defining a variable that will allow
-# accessing upstream booster hostname.
-{{- $upstreamBoosterHostnameVariable := .upstreamBoosterHostname -}}
+# accessing extraEnv data.
+{{- $extraEnvVariable := .extraEnv -}}
 {{- range $i := until (int .countPerPod) }}
         - name: fwclient-{{ $i }}
           image: "filewave/fwcld:{{ $.Values.clientVersion }}"
@@ -47,13 +47,19 @@ spec:
               value: "101"
             - name: "FILEWAVE_INSIDE_DOCKER_VERSION"
               value: "true"
-{{- if $upstreamBoosterHostnameVariable }}
-            - name: "FWCLD_BOOSTER1_HOST"
-              value: "{{ $.Values.environmentName }}-booster-{{ $upstreamBoosterHostnameVariable }}-svc"
-            - name: "FWCLD_BOOSTER1_PORT"
-              value: "20013"
-            - name: "FWCLD_BOOSTER1_PUB_PORT"
-              value: "20003"
+{{- if $extraEnvVariable }}
+{{- range $key, $value := $extraEnvVariable }}
+            - name: {{ $key | quote }}
+{{- /*
+Reason for logic being placed here is that templating doesn't work in Values file. The idea is to make it
+convenient in Values to specify just a Booster's name and everything will be taken care of under the hood.
+*/ -}}
+{{- if and (regexMatch "FWCLD_BOOSTER[0-9]+_HOST" $key) (not (eq $value $.Values.serverHostname)) }}
+              value: {{ $.Values.environmentName }}-booster-{{ $value }}-svc
+{{- else }}
+              value: {{ $value | quote }}
+{{- end }}
+{{- end }}
 {{- end }}
           lifecycle:
             postStart:
