--- a/test-environment/templates/booster.yaml
+++ b/test-environment/templates/booster.yaml
@@ -56,6 +56,7 @@ convenient in Values to specify just a Booster's name and everything will be tak
             - containerPort: 20004
             - containerPort: 20013
             - containerPort: 20014
+            - containerPort: 20024
           lifecycle:
             postStart:
               exec:
