FW-24815 make it possible to have different versions of boosters and clients

--- a/test-environment/templates/booster.yaml
+++ b/test-environment/templates/booster.yaml
@@ -19,7 +19,7 @@ spec:
     spec:
       containers:
         - name: fwbooster
-          image: "filewave/fwbooster:{{ $.Values.boosterVersion }}"
+          image: "filewave/fwbooster:{{ .boosterVersion }}"
           imagePullPolicy: Always
           resources:
             requests:
