FW-24815 more flexibility to define booster and client versions

--- a/test-environment/templates/booster.yaml
+++ b/test-environment/templates/booster.yaml
@@ -19,7 +19,11 @@ spec:
     spec:
       containers:
         - name: fwbooster
-          image: "filewave/fwbooster:{{ .boosterVersion }}"
+{{- if .boosterVersion }}
+          image: filewave/fwbooster:{{ .boosterVersion }}
+{{- else if $.Values.defaultBoosterVersion }}
+          image: filewave/fwbooster:{{ $.Values.defaultBoosterVersion }}
+{{- end }}      
           imagePullPolicy: Always
           resources:
             requests:
