--- a/test-environment/values.yaml
+++ b/test-environment/values.yaml
@@ -37,8 +37,9 @@ serverSoftwareUpdateProcessEnabled: false
 # --- Boosters Configuration ---
 
 # boosterVersion is for defining a tag in DockerHub filewave/fwbooster repository that will be used to pull Booster's
-# image. For each booster, you can define this separately.
-# boosterVersion: 14.0.0
+# image. For each booster, you can define this separately, but if you dont define for any of them
+# following value will be used as a default
+defaultBoosterVersion: 14.0.0
 
 # boosterCpu is for defining how much CPU Booster will request.
 boosterCpu: 500m
@@ -60,7 +61,8 @@ boostersConfiguration:
     enabled: true
     serviceEnabled: true
     hasPublicIpAddressForDebug: false
-    boosterVersion: 14.0.0
+#   If you wish you overwrite the defaultBoosterVersion value by commenting out following    
+#    boosterVersion: 14.0.1
     extraEnv:
       FILEWAVE_BOOSTER_SERVER1_PORT: "20015"
       FILEWAVE_BOOSTER_SERVER1_HOST: *serverHostname
@@ -68,7 +70,8 @@ boostersConfiguration:
     enabled: true
     serviceEnabled: true
     hasPublicIpAddressForDebug: false
-    boosterVersion: "202001160525.b48c9814"
+#   If you wish you overwrite the defaultBoosterVersion value by commenting out following    
+#    boosterVersion: 14.0.2
     extraEnv:
       FILEWAVE_BOOSTER_SERVER1_PORT: "20015"
       FILEWAVE_BOOSTER_SERVER1_HOST: *serverHostname
@@ -76,8 +79,9 @@ boostersConfiguration:
 # --- Clients Configuration ---
 
 # clientVersion is for defining a tag in DockerHub filewave/fwcld repository that will be used to pull Client's
-# image. For each client group, you can define this separately.
-# clientVersion: 14.0.0
+# image. For each client group, you can define this separately, but if you dont define for any of them
+# following value will be used as a default
+defaultClientVersion: 14.0.0
 
 # clientCpu is for defining how much CPU Booster will request.
 clientCpu: 5m
@@ -97,7 +101,8 @@ clientMemory: 40Mi
 clientsConfiguration:
   - name: with-chained-1
     enabled: true
-    clientVersion: 14.0.0
+#   If you wish you overwrite the defaultClientVersion value by commenting out following    
+#    clientVersion: 14.0.1
     count: 1
     countPerPod: 1
     extraEnv:
@@ -106,7 +111,8 @@ clientsConfiguration:
       FWCLD_BOOSTER1_PUB_PORT: "20003"
   - name: with-chained-2
     enabled: true
-    clientVersion: "202001200616.fd5bdcde"
+#   If you wish you overwrite the defaultClientVersion value by commenting out following    
+#    clientVersion: 14.0.2
     count: 1
     countPerPod: 1
     extraEnv:
