FW-24866 prometheus temalates are added

--- a/test-environment/templates/prometheus.yaml
+++ b/test-environment/templates/prometheus.yaml
@@ -24,3 +24,7 @@ spec:
               memory: {{ .Values.prometheusMemory }}
           ports:
               - containerPort: 9090
+          lifecycle:
+            postStart:
+                exec:
+                    command: ["/bin/sh", "-c", "echo \"$(nslookup {{ $.Values.environmentName }}-server-scv | grep \"Name\" -A1 | grep \"Address\" | cut -d' ' -f2) {{$.Values.serverHostname }}\" >> /etc/hosts"]
