--- a/test-environment/templates/prometheus.yaml
+++ b/test-environment/templates/prometheus.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.prometheus.enabled -}}
 kind: Deployment
 apiVersion: apps/v1
 metadata:
@@ -28,3 +29,4 @@ spec:
             postStart:
                 exec:
                     command: ["/bin/sh", "-c", "echo \"$(nslookup {{ $.Values.environmentName }}-server-scv | grep \"Name\" -A1 | grep \"Address\" | cut -d' ' -f2) {{$.Values.serverHostname }}\" >> /etc/hosts"]
+{{- end -}}
