--- a/test-environment/templates/prometheus-configmap.yaml
+++ b/test-environment/templates/prometheus-configmap.yaml
@@ -5,13 +5,13 @@ metadata:
   name:  {{ .Values.prometheus.name }}-settings
 data:
   prometheus.yml: |
-    job_name: 'filewave-server'
-    metrics_path: /metrics
-    params:
-      module: [http_2xx]
-    static_configs:
-      targets:
-        - http://*serverHostname:21102
-        - http://*serverHostname:21103
-
+    global:
+      scrape_interval: 15s # Set the scrape interval to every 15 seconds. Default is every 1 minute.
+      evaluation_interval: 15s # Evaluate rules every 15 seconds. The default is every 1 minute.
+    scrape_configs:
+    - job_name: 'fw-server-exporter'
+      static_configs:
+        - targets: ['{{ $.Values.serverHostname }}:21102', '{{ $.Values.serverHostname }}:21103']
+          labels:
+            system: "fwserver"
 {{- end -}}
