--- a/test-environment/templates/prometheus.yaml
+++ b/test-environment/templates/prometheus.yaml
@@ -19,14 +19,28 @@ spec:
         - name: prometheus
           image: "prom/prometheus"
           imagePullPolicy: Always
+          args: 
+            - --config.file=/etc/config/prometheus.yml
           resources:
             requests:
               cpu: {{ .Values.prometheusCpu }}
               memory: {{ .Values.prometheusMemory }}
           ports:
               - containerPort: 9090
-          lifecycle:
-            postStart:
-                exec:
-                    command: ["/bin/sh", "-c", "echo \"$(nslookup {{ $.Values.environmentName }}-server-scv | grep \"Name\" -A1 | grep \"Address\" | cut -d' ' -f2) {{$.Values.serverHostname }}\" >> /etc/hosts"]
+          volumeMounts:
+            - name: config-vol
+              mountPath: /etc/config
+            - name: prometheus-vol-{{ .Release.Name }}
+              mountPath: /data
+              subPath: data
+      volumes:
+        - name: prometheus-vol-{{ .Release.Name }}
+          persistentVolumeClaim:
+            claimName: {{ .Values.prometheus.name }}-standard-pvc
+        - name: config-vol
+          configMap:
+            name: {{ .Values.prometheus.name }}-settings
+            defaultMode: 0666
+
+
 {{- end -}}
