--- a/test-environment/templates/prometheus-configmap.yaml
+++ b/test-environment/templates/prometheus-configmap.yaml
@@ -11,7 +11,7 @@ data:
     scrape_configs:
     - job_name: 'fw-server-exporter'
       static_configs:
-        - targets: ['{{ $.Values.serverHostname }}:21102', '{{ $.Values.serverHostname }}:21103']
+        - targets: ['{{ $.Values.environmentName }}-server-svc.default.svc.cluster.local:21102', '{{ $.Values.environmentName }}-server-svc.default.svc.cluster.local:21103']
           labels:
             system: "fwserver"
 {{- end -}}
