--- a/test-environment/templates/prometheus-service.yaml
+++ b/test-environment/templates/prometheus-service.yaml
@@ -10,6 +10,9 @@ spec:
       protocol: TCP
       port: 9090
       targetPort: 9090
+    - name: pushgateway
+      protocol: TCP
+      port: 9091
 
   selector:
     app: {{ .Values.environmentName }}-prometheus
