--- a/test-environment/templates/prometheus-configmap.yaml
+++ b/test-environment/templates/prometheus-configmap.yaml
@@ -11,10 +11,18 @@ data:
     scrape_configs:
     - job_name: 'fw-server-exporter'
       static_configs:
-        - targets: ['{{ $.Values.environmentName }}-server-svc.default.svc.cluster.local:21102', '{{ $.Values.environmentName }}-server-svc.default.svc.cluster.local:21103']
+        - targets: 
+          - {{ $.Values.environmentName }}-server-svc.default.svc.cluster.local:21102
+          - {{ $.Values.environmentName }}-server-svc.default.svc.cluster.local:21103
           labels:
             system: "fwserver"
     - job_name: 'pushgateway-client'
       static_configs:
         - targets: ['localhost:9091']
+    - job_name: 'booster'
+      static_configs:
+        -targets:
+          {{- range .Values.boostersConfiguration }}
+          - {{ $.Values.environmentName }}-booster-{{ .name }}-svc.default.svc.cluster.local:21105  
+          {{- end }}
 {{- end -}}
