--- a/test-environment/templates/client.yaml
+++ b/test-environment/templates/client.yaml
@@ -52,6 +52,10 @@ spec:
               value: "101"
             - name: "FILEWAVE_INSIDE_DOCKER_VERSION"
               value: "true"
+            - name: "ENABLE_MONIORING"
+              value: "true"
+            - name: "PUSHGATEWAY_HOST"
+              value: "prometheus-server-server-svc.default.svc.cluster.local:9091"
 {{- if $extraEnvVariable }}
 {{- range $key, $value := $extraEnvVariable }}
             - name: {{ $key | quote }}
