FW-24866 fix typos, correct hostname for boosters in prometheus configMap

--- a/test-environment/templates/booster.yaml
+++ b/test-environment/templates/booster.yaml
@@ -36,7 +36,7 @@ spec:
               valueFrom:
                 fieldRef:
                   fieldPath: metadata.name
-            - name: "ENABLE_MONIORING"
+            - name: "ENABLE_MONITORING"
               value: "true"
 {{- if .extraEnv }}
 {{- range $key, $value := .extraEnv }}
