--- a/test-environment/templates/prometheus-configmap.yaml
+++ b/test-environment/templates/prometheus-configmap.yaml
@@ -26,7 +26,7 @@ data:
       static_configs:
         - targets:
           {{- range .Values.boostersConfiguration }}
-          - {{ $.Values.environmentName }}-booster-{{ .name }}-svc.default.svc.cluster.local:21104
+          - {{ $.Values.environmentName }}-booster-{{ .name }}-svc:21104
           {{- end }}
           labels:
             system: "booster"
