--- a/test-environment/templates/prometheus-configmap.yaml
+++ b/test-environment/templates/prometheus-configmap.yaml
@@ -1,8 +1,8 @@
-{{- if .Values.prometheus.enabled -}}
+{{- if .Values.prometheusEnabled -}}
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name:  {{ .Values.prometheus.name }}-settings
+  name:  {{ .Values.environmentName }}-prom-settings
 data:
   prometheus.yml: |
     global:
@@ -12,8 +12,8 @@ data:
     - job_name: 'fw-server-exporter'
       static_configs:
         - targets: 
-          - {{ $.Values.environmentName }}-server-svc.default.svc.cluster.local:21102
-          - {{ $.Values.environmentName }}-server-svc.default.svc.cluster.local:21103
+          - {{ $.Values.environmentName }}-server-svc:21102
+          - {{ $.Values.environmentName }}-server-svc:21103
           labels:
             system: "fwserver"
     - job_name: 'pushgateway-client'
