--- a/test-environment/templates/prometheus-service.yaml
+++ b/test-environment/templates/prometheus-service.yaml
@@ -1,8 +1,8 @@
-{{- if and .Values.prometheus.serviceEnabled }}
+{{- if and .Values.prometheusServiceEnabled }}
 kind: Service
 apiVersion: v1
 metadata:
-  name: {{ .Values.prometheus.name }}-server-svc
+  name: {{ .Values.environmentName }}-prom-server-svc
 spec:
   type: LoadBalancer
   ports:
@@ -13,10 +13,6 @@ spec:
     - name: pushgateway
       protocol: TCP
       port: 9091
-    # - name: grafana
-    #   protocol: TCP
-    #   port: 3000
-
   selector:
     app: {{ .Values.environmentName }}-prometheus
 {{- end }}
