RAC-241 add explicit "run" argument

--- a/test-environment/templates/server.yaml
+++ b/test-environment/templates/server.yaml
@@ -71,6 +71,7 @@ spec:
         - name: fwserver
           image: "filewave/fwserver:{{ .Values.serverVersion }}"
           imagePullPolicy: Always
+          args: ["run"]
           resources:
             requests:
               cpu: {{ .Values.serverCpu }}
